# wordseg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  dev-requirements.txt  pyproject.toml  setup.py
.circleci/: config.yml
src/wordseg/: __init__.py  base_segmenter.py  longest_string_matching.py  random_segmenter.py
tests/: test_longest_string_matching.py  test_version.py
wordseg/: __init__.py  base_segmenter.py  longest_string_matching.py  random_segmenter.py
wordseg/tests/: test_version.py
