[build-system]
requires = ["setuptools >= 65.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordseg"
version = "0.0.5"
description = "Word segmentation models"
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT License" }
authors = [ { name = "Jackson L. Lee", email = "jacksonlunlee@gmail.com" } ]
keywords = [
    "computational linguistics",
    "natural language processing",
    "NLP",
    "word segmentation",
    "linguistics",
    "corpora",
    "speech",
    "language",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Source = "https://github.com/jacksonllee/wordseg"

[project.optional-dependencies]
dev = [
    # Running tests and linters
    "black == 23.1.0",
    "flake8 == 6.0.0",
    "pytest == 7.2.1",

    # Managing source distributions
    "build == 0.10.0",
    "twine == 4.0.2",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-vv --durations=0"
testpaths = [ "tests" ]
